# MBasicLibrary

./: .gitignore  CMakeLists.txt  README.md
Container/: Array.h  Array.inl  BinaryTree.h  BitArray.h  CMakeLists.txt  Container.h  List.h  Map.inl  Match.cpp  Match.h  Queue.h  String.cpp  String.h
Math/: CMakeLists.txt  CMathInterface.h  EngineMath.cpp  EngineMath.h  Matrix3.cpp  Matrix3.h  Matrix3.inl  Matrix4.cpp  Matrix4.h  Matrix4.inl  Matrix4x4.cpp  Matrix4x4.h  Matrix4x4.inl  OtherMath.cpp  OtherMath.h  PC_SSE.h  Quat.cpp  Quat.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Transform.inl  Vector2.cpp  Vector2.h  Vector2.inl  Vector3.cpp  Vector3.h  Vector3.inl  Vector4.cpp  Vector4.h  Vector4.inl  VectorRegisterConstants.h
Math/Doc/: 数学运算.md
Platform/: CMakeLists.txt  Core.cpp  Core.h  File.h  Image.cpp  Image.h  MemoryManager.cpp  MemoryManager.h  PlatformMacro.h  Synchronize.h
Primitive/: AABB3.cpp  AABB3.h  AABB3.inl  CMakeLists.txt  Curve3.cpp  Curve3.h  Intersector.h  Line3.cpp  Line3.h  Line3.inl  OBB3.cpp  OBB3.h  OBB3.inl  Plane3.cpp  Plane3.h  Plane3.inl  Point3.cpp  Point3.h  Polygon3.cpp  Polygon3.h  Polygon3.inl  Ray3.cpp  Ray3.h  Ray3.inl  Rectangle3.cpp  Rectangle3.h  Rectangle3.inl  Segment3.cpp  Segment3.h  Segment3.inl  SegmentCurve3.h  SegmentCurve3.inl  Sphere3.cpp  Sphere3.h  Sphere3.inl  Triangle3.cpp  Triangle3.h  Triangle3.inl
Sample/: CMakeLists.txt
Sample/00_StringTest/: CMakeLists.txt  FileDemo.txt  FileTest.cpp  StringTest.cpp
Sample/01_Demo/: CMakeLists.txt
